--- a/flasksystem/templates/afterloginlayout.html
+++ b/flasksystem/templates/afterloginlayout.html
@@ -55,6 +55,10 @@
                 display: block;
 
               }
+              .row{
+              margin-left: 5px
+
+              }
 
 
     </style>
@@ -83,7 +87,7 @@
                             <a class="nav-link"> username Here <span class="caret"></span></a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('home') }}">මුල් පිටුව</a>
+                            <a class="nav-link" href="{{ url_for('loginhome') }}">මුල් පිටුව</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('about') }}">අප ගැන</a>
