--- a/flasksystem/templates/myaccount.html
+++ b/flasksystem/templates/myaccount.html
@@ -9,6 +9,8 @@
             padding-left: auto;
             /* margin-right: auto; */
             margin-left: auto;
+            argin-right:100;
+
         }
 </style>
 <div class="container">
@@ -111,9 +113,24 @@
                                             {% endif %}
                                         </div>
                              </div>
-                             <div class="form-group row">
-                                 <label for="district" class="col-md-4 col-form-label text-md-right">District</label>
 
+
+
+
+                             <div class="form-group row">
+                                     <label for="active" class="col-md-4 col-form-label text-md-right">Active</label>
+                                        <div class="col-md-6">
+                                            <select name="active" class="form-control" id="active">
+
+                                           <option value="1" {% if current_user.active==1 %}selected="selected"{% endif %} >Active</option>
+                                           <option value="0" {% if current_user.active==0 %}selected="selected"{% endif %} >De Active</option>
+
+                                            </select>
+                                        </div>
+
+                            </div>
+                            <div class="form-group row">
+                                 <label for="district" class="col-md-4 col-form-label text-md-right">District</label>
                                 <div class="col-md-6">
                                         <select name="district" class="form-control" id="district">
                                         {% set default_value = select_district.id %}
@@ -123,34 +140,38 @@
                                     </select>
 
                                 </div>
-
                             </div>
                             <div class="form-group row">
-                                    {{ form.area.label(class="col-md-4 col-form-label text-md-right") }}
+                                 <label for="area" class="col-md-4 col-form-label text-md-right">Area</label>
 
                                 <div class="col-md-6">
+                                        <select name="area" class="form-control" id="area">
 
-                                    {{ form.area(class="form-control")}}
+                                        {% for area in area %}
+                                       <option value="{{area.id}}" {% if area.id == devisionoffice_area_id %}selected="selected"{% endif %} >{{area.areaName}}</option>
+                                        {% endfor %}
+                                    </select>
 
                                 </div>
 
                             </div>
-                             <div class="form-group row">
-                                    {{ form.isactive.label(class="col-md-4 col-form-label text-md-right") }}
-                                        <div class="col-md-6">
-                                            {{ form.isactive(class="form-control")}}
-
-                                        </div>
-
-                            </div>
 
                             <div class="form-group row">
-                                    {{ form.devisionoffice.label(class="col-md-4 col-form-label text-md-right") }}
-                                        <div class="col-md-6">
-                                            {{ form.devisionoffice(class="form-control")}}
+                                 <label for="devisionoffice" class="col-md-4 col-form-label text-md-right">Devision office</label>
 
-                                        </div>
+                                <div class="col-md-6">
+                                        <select name="devisionoffice" class="form-control" id="devisionoffice">
+                                        {% set default_value = current_user.devisionoffice_id %}
+                                        {% for devisionoffices in devisionoffices %}
+                                       <option value="{{devisionoffices.id}}" {% if devisionoffices.id == default_value %}selected="selected"{% endif %} >{{devisionoffices.officeName}}</option>
+                                        {% endfor %}
+                                    </select>
+
+                                </div>
+
                             </div>
+
+
                             <div class="form-group row">
                                         {{ form.picture.label(class="col-md-4 col-form-label text-md-right") }}
                                         <div class="col-md-6">
@@ -160,7 +181,7 @@
                                                     {% for error in form.picture.errors %}
                                                         <span>{{ error }}</span>
                                                     {% endfor %}
-                                        </div>
+                                                 </div>
                                              {% else %}
                                                     {{ form.picture(class="form-control") }}
                                             {% endif %}
