--- a/flasksystem/templates/loginhome.html
+++ b/flasksystem/templates/loginhome.html
@@ -1,19 +1,109 @@
 {% extends "afterloginlayout.html" %}
-
-
 {% block content %}
 
+     {%if  current_user.usertype=='Admin' %}
+        <h1>Admin</h1>
+     {% elif current_user.usertype=='ARPA'%}
+        <h1>Agriculture Research and Product Assistant</h1>
+     {% elif current_user.usertype=='ADO'%}
+        <h1>Agrian Development Oficer</h1>
+     {% elif current_user.usertype=='Farmer'%}
+    <div class="row justify-content">
+        <div class="col col-md-6">
+          <div class="carousel-inner">
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="\static\images\1.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="..." alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="..." alt="Third slide">
+                </div>
+              </div>
+          </div>
+        </div>
 
-{%if  current_user.usertype=='Admin' %}
-<h1>Admin</h1>
-{% elif current_user.usertype=='ARPA'%}
-<h1>Agriculture Research and Product Assistant</h1>
-{% elif current_user.usertype=='ADO'%}
-<h1>Agrian Development Oficer</h1>
-{% elif current_user.usertype=='Farmer'%}
-<h1>Farmer</h1>
-{%else%}
- <h1>Unauthorized</h1>
-{% endif %}
+        <div class="row">
+            <div class="col">
+                3 of 3
+            </div>
+        </div>
+
+        <div class="row text-center">
+                <div class="col-lg-3 col-md-6 mb-4">
+                        <div class="view overlay">
+                            <a  class="nounderline" href="#">
+                            <div class="card h-100">
+                                <img class="card-img-top" src="#" alt="User Icon">
+                                    <div class="card-body">
+                                         <h4 class="card-title">Manage Users</h4>
+                                         <p class="card-text">Create Users and change user details</p>
+                                    </div>
+
+                            </div>
+                             </a>
+                        </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="view overlay">
+                        <a  class="nounderline" href="">
+                            <div class="card h-100">
+                                <img class="card-img-top" src="#" alt="User Icon">
+                                    <div class="card-body">
+                                         <h4 class="card-title">Manage Site</h4>
+                                         <p class="card-text">Create new site and manage site details</p>
+                                    </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                  <div class="card h-100">
+                    <img class="card-img-top" src="#" alt="image interior">
+                    <div class="card-body">
+                      <h4 class="card-title">Interior</h4>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                    </div>
+                    <div class="card-footer">
+                      <a href="#" class="btn btn-primary">Find Out More!</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                  <div class="card h-100">
+                    <img class="card-img-top" src="#" alt="image iolations">
+                    <div class="card-body">
+                      <h4 class="card-title">Isolation</h4>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+                    </div>
+                    <div class="card-footer">
+                      <a href="#" class="btn btn-primary">Find Out More!</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card h-100">
+                      <img class="card-img-top" src="#" alt="image iolations">
+                      <div class="card-body">
+                        <h4 class="card-title">Isolation</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+                      </div>
+                      <div class="card-footer">
+                        <a href="#" class="btn btn-primary">Find Out More!</a>
+                      </div>
+                    </div>
+                  </div>
+
+     </div>
+     {%else%}
+        <h1>Unauthorized</h1>
+     {% endif %}
+
 
 {% endblock %}
