--- a/flasksystem/templates/afterloginlayout.html
+++ b/flasksystem/templates/afterloginlayout.html
@@ -84,7 +84,7 @@
 
                         <li class="nav-item">
                             <img src=" {{image_file}} " class="avatar">
-                            <a class="nav-link"> username Here <span class="caret"></span></a>
+                            <a class="nav-link">{{current_user.fristname}} {{current_user.lastname}}<span class="caret"></span></a>
                         </li>
                          <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('loginhome') }}">මුල් පිටුව</a>
@@ -124,9 +124,16 @@
                                      <a class="nav-link" href="#">tEST</a>
                                 </li>
                             {% elif current_user.usertype=='Farmer'%}
-                                <li class="nav-item">
-                                     <a class="nav-link" href="#">fARMER</a>
-                                </li>
+                                 <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Manage Farm</a>
+                                    <div class="dropdown-menu">
+                                      <a class="dropdown-item" href="{{url_for('addnewfarm')}}">Add new Farm</a>
+                                      <a class="dropdown-item" href="#">Another action</a>
+                                      <a class="dropdown-item" href="#">Something else here</a>
+                                      <div class="dropdown-divider"></div>
+                                      <a class="dropdown-item" href="#">Separated link</a>
+                                    </div>
+                                 </li>
                             {%else%}
                                  <h1>Unauthorized</h1>
                             {% endif %}
